# DRF

./: pyproject.toml  test.py
authors/: models.py  serializers.py  views.py
authors/migrations/: 0001_initial.py
config/: schema.py  settings.py  urls.py
config/frontend/src/: App.js
frontend/: package-lock.json
frontend/src/: App.js
frontend/src/components/: Auth.js  Footer.js  Menu.js  NotFound404.js  Projects.js  TodoProject.js  Todos.js  User.js  UserProjects.js  Users.js
userapp/: serializers.py  urls.py  views.py
users/: admin.py  filters.py  models.py  serializers.py  tests.py  views.py
users/migrations/: 0001_initial.py  0002_biographies_book.py  0003_rename_book_project.py  0004_auto_20220928_1509.py  0005_alter_project_url.py  0006_rename_users_todo_project.py  0007_auto_20220928_1745.py  0008_alter_customuser_password.py
