[tool.poetry]
name = "drf"
version = "0.1.0"
description = ""
authors = ["FuckingSherlock"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "3.2.8"
Markdown = "^3.4.1"
django-filter = "^22.1"
django-cors-headers = "^3.13.0"
djangorestframework = "3.13.1"
djangorestframework-simplejwt = "^5.2.1"
mixer = "^7.2.2"
drf-yasg = "^1.21.4"
graphene-django = "^3.0.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
